# Personal-Finance-Auto-Categorizer

./: README.md
Personal Finance Auto-Categorizer/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
Personal Finance Auto-Categorizer/config/: categories.json
Personal Finance Auto-Categorizer/output/: spending_report_2026-06.html
Personal Finance Auto-Categorizer/sample_data/: sample_statement.csv
Personal Finance Auto-Categorizer/spendsense/: __init__.py  agentic_categorizer.py  categorizer.py  data_loader.py  exceptions.py  logger.py  reporter.py
Personal Finance Auto-Categorizer/spendsense/__pycache__/: __init__.cpython-313.pyc.2271471874048  agentic_categorizer.cpython-313.pyc.2594517797904  categorizer.cpython-313.pyc.2271691972096  categorizer.cpython-313.pyc.2594517286560  categorizer.cpython-313.pyc.3045187100160  data_loader.cpython-313.pyc.1553282640048  data_loader.cpython-313.pyc.2271471874192  exceptions.cpython-313.pyc.2271691970368  logger.cpython-313.pyc.2271691970512  logger.cpython-313.pyc.2949442665856  reporter.cpython-313.pyc.1624019606608  reporter.cpython-313.pyc.2271691971088  reporter.cpython-313.pyc.3045187099728
