[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spendsense"
version = "1.0.0"
description = "Personal Finance Auto-Categorizer — Ingest bank statements, auto-categorize transactions, and generate interactive spending reports."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "SpendSense Contributors"},
]
keywords = [
    "finance",
    "budgeting",
    "bank-statement",
    "expense-tracker",
    "categorization",
    "personal-finance",
    "data-analysis",
    "plotly",
    "pandas",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Typing :: Typed",
]
dependencies = [
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "openpyxl>=3.1.0",
    "google-genai>=0.1.1",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/spendsense"
Repository = "https://github.com/yourusername/spendsense"
Issues = "https://github.com/yourusername/spendsense/issues"
Changelog = "https://github.com/yourusername/spendsense/blob/main/CHANGELOG.md"

[project.scripts]
spendsense = "main:main"

[tool.setuptools.packages.find]
include = ["spendsense*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
